<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.greyjoy.smokeless.Main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout6">

    </LinearLayout>
        <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignRight="@+id/textView"
    android:layout_alignEnd="@+id/textView"
   >

        </LinearLayout>

    <Button
android:layout_width="166dp"
android:layout_height="wrap_content"
android:id="@+id/cmdStores"
android:text="@string/store"
android:onClick="gotoStore"
android:layout_alignTop="@+id/cmdJuice"
android:layout_alignParentLeft="true"
android:layout_alignParentStart="true"
        android:layout_gravity="left|center_vertical" />

    <Button
        android:text="@string/juice"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:id="@+id/cmdJuice"
        android:onClick="gotoJuice"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right|center_vertical" />

    <ImageView
        android:layout_width="192dp"
        android:layout_height="292dp"
        android:id="@+id/imageView"
        android:src="@drawable/vapenation"
        android:layout_gravity="center_horizontal|top" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="149dp"
        android:text="@string/welcome"
        android:id="@+id/textView"
        android:layout_above="@+id/cmdJuice"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="59dp"
        android:layout_gravity="center_horizontal|bottom" />
</FrameLayout>
